--- a/index.html
+++ b/index.html
@@ -11,6 +11,7 @@
     <!-- css -->
     <link rel="stylesheet" href="/css/bootstrap.min.css" />
     <link rel="stylesheet" href="/css/swiper-bundle.min.css" />
+    <link rel="stylesheet" href="css/nice-select.css" />
     <link rel="stylesheet" href="/css/animate.css" />
     <link rel="stylesheet" type="text/css" href="/css/styles.css" />
 
@@ -28,6 +29,7 @@
     <script src="/js/bootstrap.min.js"></script>
     <script src="/js/jquery.min.js"></script>
     <script src="/js/swiper-bundle.min.js"></script>
+    <script src="js/jquery.nice-select.js"></script>
     <script src="/js/carousel.js"></script>
     <script src="/js/bootstrap-select.min.js"></script>
     <script src="/js/lazysize.min.js"></script>
