--- a/index.html
+++ b/index.html
@@ -14,6 +14,8 @@
     <link rel="stylesheet" href="css/nice-select.css" />
     <link rel="stylesheet" href="/css/animate.css" />
     <link rel="stylesheet" type="text/css" href="/css/styles.css" />
+    <link rel="stylesheet" href="/css/drift-basic.min.css" />
+    <link rel="stylesheet" href="/css/photoswipe.css" />
 
     <!-- Favicon and Touch Icons  -->
     <link rel="shortcut icon" href="images/logo/short-logo.svg" />
@@ -24,10 +26,10 @@
   </head>
   <body>
     <div id="root"></div>
+    <script src="/js/jquery.min.js"></script>
     <script type="module" src="/src/main.jsx"></script>
     <!-- Javascript -->
     <script src="/js/bootstrap.min.js"></script>
-    <script src="/js/jquery.min.js"></script>
     <script src="/js/swiper-bundle.min.js"></script>
     <script src="js/jquery.nice-select.js"></script>
     <script src="/js/carousel.js"></script>
@@ -37,6 +39,7 @@
     <script src="/js/wow.min.js"></script>
     <script src="/js/multiple-modal.js"></script>
     <script src="/js/infinityslide.js"></script>
+    <script src="/js/drift.min.js"></script>
     <script src="/js/main.js"></script>
   </body>
 </html>
